# sleap-roots-contracts

./: .gitattributes  .gitignore  README.md  pyproject.toml
.claude/commands/: black.md  copilot-review.md  coverage.md  fix-formatting.md  generate-pr-review.md  lint.md  new-feature.md  pre-merge-check.md  prepare-release.md  review-openspec.md  review-pr.md  run-ci-locally.md  tdd.md  update-changelog.md  validate-env.md
.github/workflows/: build.yml  ci.yml  publish.yml  version.yml
docs/: 01-contract-library-design.md  02-contract-library-plan.md  CHANGELOG.md
docs/superpowers/specs/: 2026-07-03-model-card-and-predict-inference-config-design.md  2026-07-08-param-resolution-in-contracts-design.md  2026-07-21-prediction-manifest-in-contracts-design.md
openspec/: project.md
openspec/changes/add-analysis-input-contract/: design.md  proposal.md  tasks.md
openspec/changes/add-label-selection-contract/: design.md  proposal.md  tasks.md
openspec/changes/add-model-card-predict-inference-config/: design.md  proposal.md  tasks.md
openspec/changes/add-param-resolution/: design.md  proposal.md  tasks.md
openspec/changes/add-prediction-manifest-contract/: design.md  tasks.md
openspec/specs/param-resolution/: spec.md
schema/: analysis_input.schema.json  result_envelope.schema.json
src/sleap_roots_contracts/: __init__.py  analysis_input.py  hashing.py  identity.py  models.py  params.py  prediction_manifest.py  registry.py  schema.py  trait_definitions.yaml
tests/: conftest.py  test_analysis_input.py  test_envelope.py  test_hashing.py  test_identity.py  test_label_card.py  test_model_card.py  test_models_basic.py  test_params.py  test_prediction_manifest.py  test_provenance.py  test_registry.py  test_schema.py  test_smoke.py  test_trait_blob.py
tests/fixtures/: examples.py
(+32 files in other folders)
